--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 
 h1 {
 	text-align: center;
-	color: firebrick;
+	color: red;
 	font-family: Montserrat sans-serif;
 	text-transform: uppercase;
 }
@@ -21,8 +21,8 @@ div {
 	font-weight: bold;
 	border-radius: 20px;
 	font-family: sans-serif;
-	padding: 5x 5px 5px 5px;
-	margin: 5px 5px 5px 5px;
+	padding: 0px;
+	margin: auto;
 }
 
 
